# BuLi_scorers

./: README.md  pyproject.toml
buli_scorers/: 02_sortScorers.py  03_exploringSpielerData.ipynb  05_mergeFIFAcodes.ipynb  explore_scorers.py  exploringSpielerData.ipynb  scrapFIFAcode.ipynb  scrappingScorers.py  sortScorers.py
data/: FIFA_ISO_codes.csv  FIFA_codes.csv  addressDFBarchive.json  fifa_german_english.csv  scorer_table.csv  scorer_table_sorted.csv  spielers.csv  spielers_fixed.csv
