[tool.poetry]
name = "buli-scorers"
version = "0.1.0"
description = "bundesliga scorers until 2021-2022 season"
authors = ["Luis Giraldo Gonzalez <luisggon@protonmail.com>"]
readme = "README.md"
packages = [{include = "buli_scorers"}]

[tool.poetry.dependencies]
bs4 = "^4.11"
requests = "^2.28.1"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
