[tool.poetry]
name = "buli-scorers"
version = "0.1.0"
description = "bundesliga scorers until 2021-2022 season"
authors = ["Luis Giraldo Gonzalez <luisggon@protonmail.com>"]
readme = "README.md"
packages = [{include = "buli_scorers"}]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "*"
requests = "^2.28.1"
pandas = "^1.5.2"
jupyter = "^1.0.0"
ipykernel = "*"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
